syntax = "proto3";

package io.mystore.purchased_product.view;

import "google/protobuf/timestamp.proto";

option java_outer_classname = "PurchasedProductsModel";

message PurchasedProduct {
  string customer_id = 1;
  string order_id = 2;
  string sku_id = 3;
  string sku_name = 4;
  int32 quantity = 5;
  google.protobuf.Timestamp purchased_utc = 6;
}
